# python-junior-tracker-solution-Pavel-Pichugin

./: .gitignore  .pre-commit-config.yaml  README.md
task-app/: docker-compose.yaml
task-app/backend/: Dockerfile  pyproject.toml  requirements.txt
task-app/backend/app/: main.py
task-app/backend/app/api/: routes.py
task-app/backend/app/core/: config.py
task-app/backend/app/crud/: task.py
task-app/backend/app/db/: database.py  models.py
task-app/backend/app/schemas/: task.py
task-app/backend/tests/: conftest.py  test_routes.py
task-app/frontend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
task-app/frontend/public/: index.html
task-app/frontend/src/: App.vue  App.vue.js  App.vue.js.map  api.js  api.js.map  api.ts  main.js  main.js.map
task-app/frontend/src/components/: HelloWorld.vue  HelloWorld.vue.js  HelloWorld.vue.js.map  TaskItem.vue  TaskItem.vue.js  TaskItem.vue.js.map
task-app/frontend/src/views/: TaskCreateView.vue  TaskCreateView.vue.js  TaskCreateView.vue.js.map  TaskListView.vue  TaskListView.vue.js  TaskListView.vue.js.map
